<resources>
    <string name="app_name">WaslnY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="contacts">Contacts</string>
    <string name="welcome">Welcome...!</string>
    <string name="welcometext">WaslnY App in your service.</string>

    <string name="abouttext">WaslnY AppLication help you to know the best way to get your destination.
        \n\nFeel free to give me your feedback using Contact page.
        \n\nVersion: 1.0</string>
    <string name="contactstext">Developed by Marco Mouns</string>
    <string name="homefrom">From</string>
    <string name="hometo">To</string>
    <!--<string name="homeresult">To</string>-->
    <string name="settingtext">Select which language do you want to display:</string>
    <string name="settingAr"> Arabic   </string>
    <string name="settingEn"> English   </string>
    <string name="settingDone">Done</string>

    <string name="fababout">About Application.</string>
    <string name="fabhome">Home Page.</string>






</resources>
